--- a/FreeFlix/movie_details/movie_details.css
+++ b/FreeFlix/movie_details/movie_details.css
@@ -996,3 +996,21 @@ p {
         max-width: 100vw;
     }
 }
+
+/* --- FIXED VIDEO IFRAME ON MOBILE (prevents reload during scroll) --- */
+@media (max-width: 740px) {
+    iframe#iframe {
+        position: fixed;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        height: 200px;
+        z-index: 999;
+    }
+    .movie-poster img {
+        display: none;
+    }
+    .movie-info {
+        margin-top: 220px;
+    }
+}
